added js. centered table

--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOND</title>
+    <style>
+        #caseDiv {
+            display: flex;
+            justify-content: center;
+        }
+
+        #cases {
+            align-self: center;
+        }
+    </style>
 </head>
 
 <body>
+    <h1>Money Case Game</h1>
     <div id="container">
-        <div>
+        <div id="caseDiv">
             <table id="cases">
                 <tr>
+                    <td><button onclick="Simp()" class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                </tr>
-                <tr>
                     <td><button class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
@@ -28,8 +35,22 @@
                     <td><button class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
                 </tr>
                 <tr>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
+                </tr>
+                <tr>
+                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
                     <td><button class="editbtn">edit</button></td>
@@ -45,6 +66,7 @@
             </ul>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
