changed some text

--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
         #cases {
             align-self: center;
         }
+
+        .grayedOut {
+            color: gray;
+        }
+
+        .case {
+            background-color: rgb(243, 243, 243);
+            border: 5px;
+            color: #000000;
+            padding: 15px 32px;
+            text-align: center;
+            margin: 4px 2px;
+            cursor: pointer;
+            -webkit-transition-duration: 0.6s;
+            transition-duration: 0.6s;
+            cursor: pointer;
+            /*margin: auto;*/
+        }
     </style>
 </head>
 
@@ -23,46 +41,69 @@
         <div id="caseDiv">
             <table id="cases">
                 <tr>
-                    <td><button onclick="Simp()" class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
+                    <td><button onclick="Simp()" class="case">21</button></td>
+                    <td><button class="case">22</button></td>
+                    <td><button class="case">23</button></td>
+                    <td><button class="case">24</button></td>
+                    <td><button class="case">25</button></td>
+                    <td><button class="case">26</button></td>
                 </tr>
                 <tr>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="case">14</button></td>
+                    <td><button class="case">15</button></td>
+                    <td><button class="case">16</button></td>
+                    <td><button class="case">17</button></td>
+                    <td><button class="case">18</button></td>
+                    <td><button class="case">19</button></td>
+                    <td><button class="case">20</button></td>
                 </tr>
                 <tr>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
+                    <td><button class="case">7</button></td>
+                    <td><button class="case">8</button></td>
+                    <td><button class="case">9</button></td>
+                    <td><button class="case">10</button></td>
+                    <td><button class="case">11</button></td>
+                    <td><button class="case">12</button></td>
+                    <td><button class="case">13</button></td>
                 </tr>
                 <tr>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
-                    <td><button class="editbtn">edit</button></td>
+                    <td><button onclick="toggleLabel()" class="case">1</button></td>
+                    <td><button class="case">2</button></td>
+                    <td><button class="case">3</button></td>
+                    <td><button class="case">4</button></td>
+                    <td><button class="case">5</button></td>
+                    <td><button class="case">6</button></td>
                 </tr>
             </table>
         </div>
         <div id="listofStuff">
             <ul>
-                <li>1222</li>
-                <li>13333</li>
-                <li>1444</li>
+                <li>$0.01</li>
+                <li id="1case">$1</li>
+                <li>$5</li>
+                <li>$10</li>
+                <li>$25</li>
+                <li>$50</li>
+                <li>$75</li>
+                <li>$100</li>
+                <li>$200</li>
+                <li>$300</li>
+                <li>$400</li>
+                <li>$500</li>
+                <li>$750</li>
+                <li>$1,000</li>
+                <li>$,5000</li>
+                <li>$10,000</li>
+                <li>$25,000</li>
+                <li>$50,000</li>
+                <li>$75,000</li>
+                <li>$100,000</li>
+                <li>$200,000</li>
+                <li>$300,000</li>
+                <li>$400,000</li>
+                <li>$500,000</li>
+                <li>$750,000</li>
+                <li>$1,000,000</li>
             </ul>
         </div>
     </div>
