added game class

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOND</title>
     <style>
+        #container {
+            height: 95vh;
+            width: 95vw;
+        }
+
         #caseDiv {
             display: flex;
             justify-content: center;
