Added game update window

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <h1>Money Case Game</h1>
     <div id="container">
+        <div id="">
+            <p>Your case: </p>
+        </div>
+        <div id="updateWindow">
+            <p>dsdasdasd</p>
+        </div>
         <div id="caseDiv">
             <table id="cases">
                 <tr>
